Fix about component not aligning properly

--- a/src/app/about/about/about.component.scss
+++ b/src/app/about/about/about.component.scss
@@ -12,7 +12,7 @@ h1 {
         display: flex;
         flex-wrap: wrap;
         justify-content: left;
-
+        position: relative;
         left: -20px;
     }
 }
